--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -37,6 +37,11 @@
     --elevation--z24: 0 11px 15px -7px rgba(0,0,0,.2),0 24px 38px 3px rgba(0,0,0,.14),0 9px 46px 8px rgba(0,0,0,.12);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html,body {
     min-height: 100vh;
 }
@@ -60,8 +65,10 @@ body {
 
 .navigation {
     display: -ms-inline-flexbox;
+    display: -webkit-inline-box;
     display: inline-flex;
     -ms-flex-pack: justify;
+    -webkit-box-pack: justify;
     justify-content: space-between;
     height: 50px;
     width: 100%;
@@ -76,10 +83,12 @@ body {
 }
 .navigation-left {
     display: -ms-inline-flexbox;
+    display: -webkit-inline-box;
     display: inline-flex;
 }
 .navigation-right {
     display: -ms-inline-flexbox;
+    display: -webkit-inline-box;
     display: inline-flex;
     margin-right: 10px;
 }
@@ -117,6 +126,7 @@ body {
     min-height: calc(100vh - 50px);
     background-color: var(--secondary-color);
     padding: 10px;
+    -webkit-transition: var(--trasition__bezier);
     transition: var(--trasition__bezier);
 }
 .main-content-close {
@@ -135,6 +145,7 @@ body {
     height: calc(100vh - 50px);
     background-color: var(--primary-color);
     overflow-x: hidden;
+    -webkit-transition: var(--trasition__bezier);
     transition: var(--trasition__bezier);
     position: fixed;
     right: 0;
@@ -147,6 +158,7 @@ body {
         height: 100vh;
         background-color: var(--primary-color);
         overflow-x: hidden;
+        -webkit-transition: var(--trasition__bezier);
         transition: var(--trasition__bezier);
         position: fixed;
         right: 0;
@@ -184,7 +196,6 @@ body {
 }
 .sidebar-nav {
     list-style: none;
-    -webkit-padding-start: 0px;
 }
 .sidebar-close-nav {
     opacity: 0;
@@ -202,6 +213,8 @@ body {
 }
 .sidebar-nav li a {
     color: var(--primary-text-white);
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     width: 100%;
     text-decoration: none;
@@ -281,12 +294,16 @@ body {
 }
 .card-holder {
     display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
     -ms-flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
     flex-direction: row;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     -ms-flex-pack: center;
+    -webkit-box-pack: center;
     justify-content: center;
 }
 .card {
@@ -451,4 +468,8 @@ body {
 
 .cover {
     width: 85px;
+}
+
+.date-input {
+    line-height: 20px !important;
 }
