--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <!--<link rel="stylesheet" href="/css/font-awesome.min.css"/>-->
     <link rel="stylesheet" href="/css/form-elements.css"/>
     <link rel="stylesheet" href="/css/login-style.css"/>
     <link rel="icon" type="image/x-icon" th:href="@{/img/favicon.ico}"/>
@@ -92,7 +91,7 @@
 </footer>
 
 <!-- Javascript -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<script src="/js/jquery-3.2.1.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.backstretch.min.js"></script>
 <script src="/js/login-scripts.js"></script>
