--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -35,7 +35,7 @@
 
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 text">
-                <h1><strong>Bookshelves &amp; Reading Lists</strong></h1>
+                <h1><strong>Bookcase</strong></h1>
                 <div class="description">
                     <p>
                         Organize your book collection, and keep track of your reading progress.
@@ -84,7 +84,7 @@
 </footer>
 
 <!-- Javascript -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<script src="/js/jquery-3.2.1.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.backstretch.min.js"></script>
 <script src="/js/login-scripts.js"></script>
