--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -35,7 +35,7 @@
 
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 text">
-                <h1><strong>Bookshelves &amp; Reading Lists</strong></h1>
+                <h1><strong>Bookcase</strong></h1>
                 <div class="description">
                     <p>
                         Organize your book collection, and keep track of your reading progress.
