--- a/src/main/resources/templates/Book_Info.html
+++ b/src/main/resources/templates/Book_Info.html
@@ -19,7 +19,7 @@
                         <h2 th:text="${results.title}"></h2>
                         <div th:each="author : ${results.authors}">
                             <a th:href="@{'/author/'+${author.id}}">
-                                <span class="secondary-text-color author-span" th:text="' '+${author.firstName} +' '+ ${author.lastName}"></span>
+                                <span id="author-text" class="author-span" th:text="' '+${author.firstName} +' '+ ${author.lastName}"></span>
                             </a>
                         </div>
                         <div class="page-info-list">
